playing with background image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,11 @@
 html {
   background: #ddd;
 }
+// html{
+//   background: #ddd
+//   url('matrix.jpg') no-repeat center fixed;
+//   background-size: cover;
+// }
 
 body {
   max-width: 970px;
