more styling, I will move to rspec now I promise

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,7 @@
           <%= link_to("#{x.product.name}", user_product_path(@user.id, x.product.id)) %>
         </td>
         <td>
-          <%= x.quantity %>
+          <span class="badge"><%= x.quantity %></span>
         </td>
         <td>
           <%= x.order.status %>
