--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,14 +15,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-html {
-  background: #ddd;
+html{
+  background: #ddd
+  url('matrix.jpg') no-repeat center fixed;
+  background-size: cover;
 }
-// html{
-//   background: #ddd
-//   url('matrix.jpg') no-repeat center fixed;
-//   background-size: cover;
-// }
 
 body {
   max-width: 970px;
@@ -76,5 +73,9 @@ select {
   color: #fff;
 }
 .navbar-default .navbar-nav > li > a {
+  color: #fff;
+}
+
+.badge a{
   color: #fff;
 }
