--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -87,3 +87,11 @@
     </tbody>
   </table>
 </div>
+
+<div class="row">
+  <div class="col-lg-12">
+    <p>
+      <%= link_to "Back to Order Fulfillment", :back, class: "btn btn-default" %>
+    </p>
+  </div>
+</div>
