--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,16 +20,16 @@
 <% end %>
 
 
-<h1>Products</h1> 
+<h1>Products</h1>
 <div class = "container-fluid">
   <div class ="row">
-    <div class = "col-sm-4">
+    <div class = "col-sm-4 hidden-xs">
       <h1>Name</h1>
     </div>
-    <div class = "col-sm-4">
+    <div class = "col-sm-4 hidden-xs">
       <h1>Photo</h1>
     </div>
-    <div class = "col-sm-4">
+    <div class = "col-sm-4 hidden-xs">
       <h1>Price</h1>
     </div>
   </div>
@@ -39,7 +39,7 @@
           <% if product.active %>
             <div class="row">
               <div class = "col-sm-4">
-                <p><%= link_to "#{product.name}", product_path(product.id) %></p>
+                <p><%= link_to "#{product.name}", product_path(product.id), class: "btn btn-default" %></p>
               </div>
               <div class = "col-sm-4">
                 <p><%= image_tag("#{product.photo_url}", class: "photo") %></p>
@@ -84,5 +84,5 @@
         <% end %>
       <% end %>
     <% end %>
-  
+
 </div>
