--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
             <li><%= link_to 'Log Out', logout_path, method: :delete %></li>
           <% else %>
             <li><%= link_to 'Log In', login_path %></li>
-            <li><%= link_to 'Register', new_user_path %></li>
+            <li><%= link_to 'Register', register_path %></li>
           <% end %>
         </ul>
         <ul class="nav navbar-nav navbar-right">
