fixed order fulfillment bug where logged in users could view other users' fulfillment pages

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,7 +34,7 @@
           <span class="badge"><%= x.quantity %></span>
         </td>
         <td>
-          <%= x.order.status %>
+          <%= x.order.status.capitalize %>
         </td>
       </tr>
     <% end %>
