--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -14,48 +14,55 @@
   <%= render partial: "shared/errors", locals: {instance: @product} %>
 <% end %>
 
+<h3>Enter a new product</h3>
 
 <%= form_for @product, url: user_products_path(@merchant.id), method: :post, html: { class: "form" } do |f| %>
 
   <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :price %>
-    <%= f.text_field :price, placeholder: "$0.00" %>
+    <%= f.text_field :price, placeholder: "$0.00", class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :description %>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :photo_url %>
-    <%= f.text_field :photo_url %>
+    <%= f.text_field :photo_url, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :stock %>
-    <%= f.number_field :stock, step: 1, value: 0 %>
+    <%= f.number_field :stock, step: 1, value: 0, class: "form-control" %>
   </div>
 
   <%= f.fields_for :product_categories do |pc| %>
     <div class="form-group">
+      <%= pc.label :category_id, class: "form-label" %>
       <%= pc.collection_select(:category_id, Category.all, :id, :name ) %>
       <%= pc.hidden_field :product_id, value: @product_id %>
     </div>
   <% end %> 
+
+    <p>
+      <%= link_to "Create a new Category", new_category_path, method: :get, class: "btn btn-default" %>
+    </p>
 
   <div class="form-group">
     <%= f.hidden_field :active, value: true %>
     <%= f.hidden_field :user_id, value: params[:user_id] %>
   </div>
 
-  <%= f.submit "Create a Product", class: "btn btn-default" %>
+  <p>
+    <%= f.submit "Create a Product", class: "btn btn-primary" %>
+  </p>
 
 <% end %>
 
-<%= link_to "Create a new Category", new_category_path, method: :get, class: "btn btn-default" %>
