--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -59,7 +59,7 @@
             <p><%= link_to "#{product.name}", product_path(product.id) %></p>
           </div>
           <div class = "col-sm-4">
-            <p><%= image_tag("#{product.photo_url}", class: "photo") %></p>
+            <p><%= image_tag("#{product.photo_url}", class: "product-img-sm") %></p>
           </div>
           <div class = "col-sm-4">
             <p><%= readable_price(product.price) %></p>
@@ -75,7 +75,7 @@
             <p><%= link_to "#{product.name}", product_path(product.id) %></p>
           </div>
           <div class = "col-sm-4">
-            <p><%= image_tag("#{product.photo_url}", class: "photo") %></p>
+            <p><%= image_tag("#{product.photo_url}", class: "product-img-sm") %></p>
           </div>
           <div class = "col-sm-4">
             <p><%= readable_price(product.price) %></p>
