--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,7 +16,7 @@
 <% end %>
 
 <% if request.path.include?("filter") %>
-  <%= link_to "See all Products", products_path, method: :get, class: "btn" %>
+  <%= link_to "See all Products", products_path, method: :get, class: "btn btn-default" %>
 <% end %>
 
 
