--- a/app/views/orders/confirmation.html.erb
+++ b/app/views/orders/confirmation.html.erb
@@ -23,5 +23,5 @@
 <p>Order time: <%= readable_date(@order.updated_at) %></p>
 
 <p>Current status: <%= @order.status %></p>
-
+<%= button_to "Cancel Order", cancel_order_path, class: "btn btn-danger" %>
 <%= link_to "Return to shopping", products_path, class: "btn btn-primary" %>
