--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -51,16 +51,7 @@
     
     <p>Current categories:</p>
 
-    <ul class="list-inline">
-      <% @product.categories.each do |category| %>
-        <% pc = category.product_categories.find_by(product_id: @product.id) %>
-        <li><p><span class="label label-info"><%= category.name %></span></p>
-          <% if @user && @user == @product.user %>
-            <%= link_to 'Remove Category', product_product_category_path(@product, pc), method: :delete, class: "btn btn-sm btn-danger" %>
-          <% end %>
-        </li>
-      <% end %>
-    </ul>
+    <%= render partial: 'shared/category_display', locals: { product: @product } %>
 
     <%= link_to "Create a new Category", new_category_path, method: :get, class: "btn btn-default" %>
 
