--- a/app/views/home/_product.html.erb
+++ b/app/views/home/_product.html.erb
@@ -1,2 +1,3 @@
-<p><%= link_to "#{product.name} - #{readable_price(product.price)}", product_path(product), class: "btn btn-default" %>
+<p>
+  <%= link_to "#{product.name} - #{readable_price(product.price)}", product_path(product), class: "btn btn-default" %>
 </p>
