--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -7,7 +7,8 @@
 <% if flash.now[:errors] %>
   <div>
     <p class="alert alert-danger">
-    <%= flash.now[:errors] %> </p>
+      <%= flash.now[:errors] %>
+    </p>
   </div>
 <% end %>
 
@@ -25,17 +26,33 @@
 
 <table class="table">
   <tr>
-    <th>Item</th>
-    <th>Price</th>
-    <th>Quantity</th>
-    <th>Line Price</th>
+    <th>
+      Item
+    </th>
+    <th>
+      Price
+    </th>
+    <th>
+      Quantity
+    </th>
+    <th>
+      Line Price
+    </th>
   </tr>
   <% @order_items.each do |order_item| %>
     <tr>
-      <td><%= order_item.product.name %></td>
-      <td><%= readable_price(order_item.product.price) %></td>
-      <td><%= order_item.quantity %></td>
-      <td><%= readable_price(order_item.product.price * order_item.quantity) %></td>
+      <td>
+        <%= order_item.product.name %>
+      </td>
+      <td>
+        <%= readable_price(order_item.product.price) %>
+      </td>
+      <td>
+        <%= order_item.quantity %>
+      </td>
+      <td>
+        <%= readable_price(order_item.product.price * order_item.quantity) %>
+      </td>
     </tr>
   <% end %>
 </table>
@@ -44,59 +61,72 @@
 
 <%= link_to 'Edit order', cart_path, class: "btn btn-warning" %>
 
-
 <%= form_for @order, url: finalize_order_path(@order), method: :put, class: "form" do |f| %>
 
   <h3>Shipping</h3>
+
   <div class="form-group">
     <%= f.label :mailing_name, "Full name" %>
     <%= f.text_field :mailing_name, required: true, class: 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :email %>
     <%= f.text_field :email, required: true, class: 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :address1, "Address line 1" %>
     <%= f.text_field :address1, required: true, class: 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :address2, "Address line 2" %>
     <%= f.text_field :address2, class: 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :city %>
     <%= f.text_field :city, required: true, class: 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :state, class: "form-label" %>
     <%= f.select :state, Order::US_STATES, { include_blank: true }, { class: 'form-control' } %>
   </div>
+
   <div class="form-group">
     <%= f.label :mailing_zip, "Zip code" %>
     <%= f.text_field :mailing_zip, maxlength: 5, required: true, class: 'form-control' %>
   </div>
 
   <h3>Payment</h3>
+
   <div class="form-group">
     <%= f.label :cc_name, "Name on card" %>
     <%= f.text_field :cc_name, required: true, class: 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :cc_number, "Card number" %>
     <%= f.text_field :cc_number, required: true, class: 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :cc_expiration, "Credit card expiration date", class: "form-label" %>
     <%= f.date_select :cc_expiration, use_month_numbers: true, use_two_digit_numbers: true, order: [:month, :year], start_year: Date.today.year, start_month: Date.today.month, end_year: Date.today.year+10, prompt: true, required: true, class: 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :cc_cvv, "CVV (3 digit code on back of card)" %>
     <%= f.text_field :cc_cvv, maxlength: 3, required: true, class: 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :billing_zip, "Billing zip code" %>
     <%= f.text_field :billing_zip, maxlength: 5, required: true, class: 'form-control' %>
   </div>
+
     <%= f.submit "Place order", class: 'btn btn-danger btn-block'%>
+    
 <% end %>
