--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,34 +1,55 @@
 <h1>Order <%= @order.id %></h1>
 
 <% if @order.status == "pending" %>
-  <p>Order is pending. No customer information yet.</p>
+  <p>
+    Order is pending. No customer information yet.
+  </p>
 <% else %>
   <div class ="col-md-6">
     <h3>Customer Information</h3>
     <table class = "table">
       <tbody>
         <tr>
-          <th>Buyer:</th>
-          <td><%= @order.mailing_name %></td>
+          <th>
+            Buyer:
+          </th>
+          <td>
+            <%= @order.mailing_name %>
+          </td>
         </tr>
         <tr>
-          <th>Email Address:</th>
-          <td><%= @order.email %></td>
+          <th>
+            Email Address:
+          </th>
+          <td>
+            <%= @order.email %>
+          </td>
         </tr>
         <tr>
-          <th>Mailing Address:</th>
-          <td><%= "#{@order.address1}, #{@order.city}, #{@order.state} #{@order.mailing_zip}" %></td>
+          <th>
+            Mailing Address:
+          </th>
+          <td>
+            <%= "#{@order.address1}, #{@order.city}, #{@order.state} #{@order.mailing_zip}" %>
+          </td>
         </tr>
         <tr>
-          <th>Last 4 of Credit Card:</th>
-          <td><%= @order.cc_number[-4..-1] %></td>
+          <th>
+            Last 4 of Credit Card:
+          </th>
+          <td>
+            <%= @order.cc_number[-4..-1] %>
+          </td>
         </tr>
         <tr>
-          <th>Credit Card Expiration Date:</th>
+          <th>
+            Credit Card Expiration Date:
+          </th>
           <% unless @order.cc_expiration.nil? %>
-            <td><%= @order.cc_expiration.month %>/<%=@order.cc_expiration.year%></td>
+            <td>
+              <%= @order.cc_expiration.month %>/<%=@order.cc_expiration.year%>
+            </td>
           <% end %>
-
         </tr>
       </tbody>
     </table>
