--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,7 @@
 <div class="container-fluid">
   <footer class="footer">
-    <p>Copyright <%= Date.today.year %></p>
+    <p>
+      Copyright <%= Date.today.year %>
+    </p>
   </footer>
 </div>
