--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,5 @@
 <h2>Edit <%= @product.name %></h2>
+
 <% if flash[:success] %>
   <div>
     <p class="alert alert-success"><%= flash[:success] %></p>
@@ -15,46 +16,52 @@
   <div class="col-sm-6">
     <p>
       <%= form_for @product, html: { class: "form" } do |f| %>
-      <div class="form-group">
-        <%= f.label :name %>
-        <%= f.text_field :name, class: "form-control" %>
-      </div>
+        <div class="form-group">
+          <%= f.label :name %>
+          <%= f.text_field :name, class: "form-control" %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :price %>
-        <%= f.text_field :price, value: readable_price(@product.price), class: "form-control" %>
-      </div>
+        <div class="form-group">
+          <%= f.label :price %>
+          <%= f.text_field :price, value: readable_price(@product.price), class: "form-control" %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :description %>
-        <%= f.text_area :description, class: "form-control" %>
-      </div>
+        <div class="form-group">
+          <%= f.label :description %>
+          <%= f.text_area :description, class: "form-control" %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :photo_url, "Photo URL or Filename" %>
-        <%= f.text_field :photo_url, class: "form-control" %>
-      </div>
+        <div class="form-group">
+          <%= f.label :photo_url, "Photo URL or Filename" %>
+          <%= f.text_field :photo_url, class: "form-control" %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :stock %>
-        <%= f.number_field :stock, class: "form-control" %>
-      </div>
+        <div class="form-group">
+          <%= f.label :stock %>
+          <%= f.number_field :stock, class: "form-control" %>
+        </div>
 
-      <%= f.submit class: "btn btn-primary" %>
+        <%= f.submit class: "btn btn-primary" %>
       <% end %>
     </p>
   </div>
 
   <div class="col-sm-6">
-    
-    <%= render partial: 'active_text_toggle_button' %>
-    
-    <p>Current categories:</p>
 
+    <%= render partial: 'active_text_toggle_button' %>
+
+    <p>
+      Current categories:
+    </p>
     <ul class="list-inline">
       <% @product.categories.each do |category| %>
         <% pc = category.product_categories.find_by(product_id: @product.id) %>
-        <li><p><span class="label label-info"><%= category.name %></span></p>
+        <li>
+          <p>
+            <span class="label label-info">
+              <%= category.name %>
+            </span>
+          </p>
           <% if @user && @user == @product.user %>
             <%= link_to 'Remove Category', product_product_category_path(@product, pc), method: :delete, class: "btn btn-sm btn-danger" %>
           <% end %>
@@ -72,7 +79,6 @@
           <% end %>
         <% end %>
       </div>
-
       <%= f.submit "Add Category", class: "btn btn-primary" %>
     <% end %>
   </div>
