--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,14 +6,22 @@
         <div class="container-fluid">
         <ul class="nav navbar-nav">
           <% if session[:user_id] %>
-            <li><%= link_to 'Log Out', logout_path, method: :delete %></li>
+            <li>
+              <%= link_to 'Log Out', logout_path, method: :delete %>
+            </li>
           <% else %>
-            <li><%= link_to 'Log In', login_path %></li>
-            <li><%= link_to 'Register', register_path %></li>
+            <li>
+              <%= link_to 'Log In', login_path %>
+            </li>
+            <li>
+              <%= link_to 'Register', register_path %>
+            </li>
           <% end %>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to 'Cart', cart_path %></li>
+          <li>
+            <%= link_to 'Cart', cart_path %>
+          </li>
         </ul>
         </div>
       </nav>
