--- a/app/views/shared/_product_details.html.erb
+++ b/app/views/shared/_product_details.html.erb
@@ -3,12 +3,21 @@
     <h3 class="panel-title">Product details</h3>
   </div>
   <div class="panel-body">
-    <p><%= image_tag @product.photo_url, class: "img-responsive img-rounded product-img-lg" %></p>
-    <p><%= @product.description %></p>
+    <p>
+      <%= image_tag @product.photo_url, class: "img-responsive img-rounded product-img-lg" %>
+    </p>
+    <p>
+      <%= @product.description %>
+    </p>
     <ul class="list-inline">
       <% @product.categories.each do |category| %>
         <% pc = category.product_categories.find_by(product_id: @product.id) %>
-        <li><p><span class="label label-info"><%= category.name %></span></p>
+        <li>
+          <p>
+            <span class="label label-info">
+              <%= category.name %>
+            </span>
+          </p>
           <% if @user && @user == @product.user %>
             <%= link_to 'Remove Category', product_product_category_path(@product, pc), method: :delete, class: "btn btn-sm btn-danger" %>
           <% end %>
@@ -16,7 +25,9 @@
       <% end %>
     </ul>
 
-    <p><%= @product.stock %> available for <%= readable_price(@product.price) %> each</p>
+    <p>
+      <%= @product.stock %> available for <%= readable_price(@product.price) %> each
+    </p>
 
     <% if shopping_page %>
       <% if @product.stock > 0 && !(@user && @product.user == @user) %>
@@ -25,7 +36,6 @@
             <%= f.label :quantity %>
             <%= f.number_field :quantity, in: 1..@product.stock, step: 1, value: 1, class: "form-control" %>
           </div>
-
             <%= f.submit 'Add to Cart', class: "btn btn-primary" %>
         <% end %>
       <% end %>
