removed commented debugging code from header

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -32,9 +32,9 @@
       </h1>
 
       <!-- uncomment for debugging, remove before submitting final project -->
-      <p>Order_id is: <%= session[:order_id] ? session[:order_id] : "none set" %></p>
-      <p>Logged-in user is: <%= session[:user_id] ? @user.username : "none" %></p>
-      <p>User id is: <%= session[:user_id] ? session[:user_id] : "none" %></p>
+      <!-- <p>Order_id is: <%#= session[:order_id] ? session[:order_id] : "none set" %></p> -->
+      <!-- <p>Logged-in user is: <%#= session[:user_id] ? @user.username : "none" %></p> -->
+      <!-- <p>User id is: <%#= session[:user_id] ? session[:user_id] : "none" %></p> -->
 
     </div>
   </div>
