--- a/app/views/order_items/cart.html.erb
+++ b/app/views/order_items/cart.html.erb
@@ -87,7 +87,7 @@
   </table>
 
   <p>
-    <%= link_to 'Check out', checkout_path, class: "btn btn-success btn-block" %>
+    <%= link_to 'Check out', checkout1_path, class: "btn btn-success btn-block" %>
   </p>
   <p>
     <%= link_to 'Continue shopping', products_path, class: 'btn btn-primary' %>
