--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -37,6 +37,21 @@
         </div>
 
         <div class="form-group">
+          <%= f.label :length, "Length (inches)" %>
+          <%= f.number_field :length, step: 1, min: 1, value: 1, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :width, "Width (inches)" %>
+          <%= f.number_field :width, step: 1, min: 1, value: 1, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :height, "Height (inches)" %>
+          <%= f.number_field :height, step: 1, min: 1, value: 1, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
           <%= f.label :stock %>
           <%= f.number_field :stock, class: "form-control" %>
         </div>
