WIP: api response error, added weight to product schema

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -109,7 +109,7 @@
 
   <div class="form-group">
       <%= f.label :shipping, "Options" %>
-      <%= f.select :shipping, shipping_options, {include_blank: true}, class: "form-control" %>
+      <%= f.select :shipping, @shipping_options, {include_blank: true}, class: "form-control" %>
   </div>
 
   <h3>Payment</h3>
