WIP: separating orders by merchant. able to separate order items by merchant, need to incorporate merchant origin location and order item parameters to instantiate a new package

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -63,7 +63,7 @@
 
 <%= form_for @order, url: shipping_path(@order), method: :put, class: "form" do |f| %>
 
-  <h3>Shipping</h3>
+  <h3>Mailing Address:</h3>
 
   <div class="form-group">
     <%= f.label :mailing_name, "Full name" %>
