--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,6 +18,23 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :city %>
+    <%= f.text_field :city, required: true, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :zip %>
+    <%= f.text_field :zip, required: true, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :state %>
+    <%= f.select :state, Order::US_STATES, { include_blank: true }, { class: 'form-control' } %>
+  </div>
+
+  <%= f.hidden_field :country, :value => "US" %>
+
+  <div class="form-group">
     <%= f.label :password %>
     <%= f.password_field :password, class: "form-control" %>
   </div>
