--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,6 +15,8 @@
     </p>
   </div>
 <% end %>
+<br>
+<p>NOTE: Currently only servicing within the United States of America</p>
 
 <%= form_for @new_user, html: { class: "form" } do |f| %>
   <div class="form-group">
@@ -25,6 +27,23 @@
   <div class="form-group">
     <%= f.label :email %>
     <%= f.email_field :email, required: true, autofocus: true, class: "form-control" %>
+  </div>
+
+  <%= f.hidden_field :country, :value => "US" %>
+
+  <div class="form-group">
+    <%= f.label :state %>
+    <%= f.select :state, Order::US_STATES, { include_blank: true }, { class: 'form-control' } %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :city %>
+    <%= f.text_field :city, required: true, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :zip %>
+    <%= f.text_field :zip, required: true, class: "form-control" %>
   </div>
 
   <div class="form-group">
