--- a/app/views/orders/checkout2.html.erb
+++ b/app/views/orders/checkout2.html.erb
@@ -23,6 +23,30 @@
 <% end %>
 
 <h3>Order details:</h3>
+<p>
+  2 day
+</p>
+<%= @rate_2day["service_name"] %>
+<%= @rate_2day["delivery_date"] %>
+<!-- strftime -->
+<%= number_to_currency(@rate_2day["total_price"]/100.00) %>
+
+<p>
+  ground
+</p>
+<%= @rate_ground["service_name"] %>
+<%= @rate_ground["delivery_date"] %>
+<!-- strftime -->
+<%= number_to_currency(@rate_ground["total_price"]/100.00) %>
+
+<p>
+  standard
+</p>
+<%= @rate_standard_on["service_name"] %>
+<%= @rate_standard_on["delivery_date"] %>
+<!-- strftime -->
+<%= number_to_currency(@rate_standard_on["total_price"]/100.00) %>
+
 
 <table class="table">
   <tr>
