Adds all the things for shipping confirmation

--- a/app/views/orders/checkout1.html.erb
+++ b/app/views/orders/checkout1.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for @order, url: checkout2_path, method: :put, class: "form" do |f| %>
+<%= form_for @order, url: shipping_path, method: :put, class: "form" do |f| %>
 
   <div class="form-group">
     <%= f.label :address1, "Address line 1" %>
