--- a/app/views/orders/checkout2.html.erb
+++ b/app/views/orders/checkout2.html.erb
@@ -23,28 +23,6 @@
 <% end %>
 
 <h3>Order details:</h3>
-    <%= @rate_2day["service_name"] %>
-    <%= @rate_2day["delivery_date"] %>
-    <!-- strftime -->
-    <%= number_to_currency(@rate_2day["total_price"]/100.00) %>
-
-    <p>
-      ground
-    </p>
-    <%= @rate_ground["service_name"] %>
-    <%= @rate_ground["delivery_date"] %>
-    <!-- strftime -->
-    <%= number_to_currency(@rate_ground["total_price"]/100.00) %>
-
-    <p>
-      standard
-    </p>
-    <%= @rate_standard_on["service_name"] %>
-    <%= @rate_standard_on["delivery_date"] %>
-    <!-- strftime -->
-    <%= number_to_currency(@rate_standard_on["total_price"]/100.00) %>
-
-
 
 <table class="table">
   <tr>
@@ -79,8 +57,10 @@
   <% end %>
 </table>
 
-
+<p>Shipping cost: <%= readable_price(@shipping.to_i) %></p>
 <p>Order total: <%= readable_price(@order.subtotal) %></p>
+
+<p>Final total: <%= readable_price(@shipping.to_i + @order.subtotal) %></p>
 
 <%= form_for @order, url: finalize_order_path(@order), method: :put, class: "form" do |f| %>
 
