--- a/app/views/orders/shipping_confirmation.html.erb
+++ b/app/views/orders/shipping_confirmation.html.erb
@@ -1,21 +1,31 @@
-<% form_for @shipping |f| %>
-    <%= @rate_2day["service_name"] %>
-    <%= @rate_2day["delivery_date"] %>
-    <!-- strftime -->
-    <%= number_to_currency(@rate_2day["total_price"]/100.00) %>
+<%= form_tag checkout2_path do %>
 
-    <p>
-      ground
-    </p>
-    <%= @rate_ground["service_name"] %>
-    <%= @rate_ground["delivery_date"] %>
-    <!-- strftime -->
-    <%= number_to_currency(@rate_ground["total_price"]/100.00) %>
+  <%= label_tag(
+    name = @rate_2day["service_name"] + @rate_2day["delivery_date"]
+  ) %>
+    <%= radio_button_tag(
+      "price",
+      (@rate_2day["total_price"]),
+      checked = false)
+    %>
 
-    <p>
-      standard
-    </p>
-    <%= @rate_standard_on["service_name"] %>
-    <%= @rate_standard_on["delivery_date"] %>
-    <!-- strftime -->
-    <%= number_to_currency(@rate_standard_on["total_price"]/100.00) %>
+  <%= label_tag(
+    name = @rate_ground["service_name"] + @rate_ground["delivery_date"]
+  ) %>
+    <%= radio_button_tag(
+      "price",
+      (@rate_ground["total_price"]),
+      checked = false)
+    %>
+
+  <%= label_tag(
+    name = @rate_standard_on["service_name"] + @rate_standard_on["delivery_date"]
+  ) %>
+    <%= radio_button_tag(
+      "price",
+      (@rate_standard_on["total_price"]),
+      checked = false)
+    %>
+
+    <%= submit_tag  %>
+<% end %>
