--- a/app/views/orders/shipping_confirmation.html.erb
+++ b/app/views/orders/shipping_confirmation.html.erb
@@ -1,31 +1,39 @@
 <%= form_tag checkout2_path do %>
+  <div class="form-group">
+    <%= label_tag(
+      name = @rate_2day["service_name"]
+    ) %>
+      <%= radio_button_tag(
+        "price",
+        (@rate_2day["total_price"]),
+        checked = false)
+      %>
+      <p><%= @rate_2day["delivery_date"].to_datetime.strftime("Delivered by: %m/%d")  %></p>
+  </div>
 
-  <%= label_tag(
-    name = @rate_2day["service_name"] + @rate_2day["delivery_date"]
-  ) %>
-    <%= radio_button_tag(
-      "price",
-      (@rate_2day["total_price"]),
-      checked = false)
-    %>
+  <div class="form-group">
+    <%= label_tag(
+      name = @rate_ground["service_name"]
+    ) %>
+      <%= radio_button_tag(
+        "price",
+        (@rate_ground["total_price"]),
+        checked = false)
+      %>
+      <p><%= @rate_ground["delivery_date"].to_datetime.strftime("Delivered by: %m/%d")  %></p>
+  </div>
 
-  <%= label_tag(
-    name = @rate_ground["service_name"] + @rate_ground["delivery_date"]
-  ) %>
-    <%= radio_button_tag(
-      "price",
-      (@rate_ground["total_price"]),
-      checked = false)
-    %>
+  <div class="form-group">
+    <%= label_tag(
+      name = @rate_standard_on["service_name"]
+    ) %>
+      <%= radio_button_tag(
+        "price",
+        (@rate_standard_on["total_price"]),
+        checked = false)
+      %>
+      <p><%= @rate_standard_on["delivery_date"].to_datetime.strftime("Delivered by: %m/%d")  %></p>
+  </div>
 
-  <%= label_tag(
-    name = @rate_standard_on["service_name"] + @rate_standard_on["delivery_date"]
-  ) %>
-    <%= radio_button_tag(
-      "price",
-      (@rate_standard_on["total_price"]),
-      checked = false)
-    %>
-
-    <%= submit_tag  %>
+      <%= submit_tag  %>
 <% end %>
