Sucessgit add . Adds @rate_array to shipping_confirmation view, and ternary for if no delivery estimate available. Modifies the #set_services cases for UPS.

--- a/app/views/orders/shipping_confirmation.html.erb
+++ b/app/views/orders/shipping_confirmation.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag checkout2_path do %>
-  <%= @rate_array.each do |rate| %>
-    
+  <% @rate_array.each do |rate| %>
+
       <div class="form-group">
         <%= label_tag(
           name = rate["service_name"]
@@ -10,7 +10,7 @@
             (rate["total_price"]),
             checked = false)
           %>
-          <p><%= rate["delivery_date"].to_datetime.strftime("Delivered by: %m/%d")  %></p>
+        <p><%= rate["delivery_date"]? rate["delivery_date"].to_datetime.strftime("Delivered by: %m/%d") : "No Estimate Available"  %></p>
       </div>
   <% end %>
   <%= submit_tag  %>
