troubleshooting error display for checkout process

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -1,20 +1,6 @@
 <section class="checkout_view">
   <h2>Finalize Order</h2>
 
-  <% if flash.now[:errors] %>
-    <div>
-      <p class="alert alert-danger"><%= flash.now[:errors] %></p>
-    </div>
-  <% end %>
-
-  <% if @order.errors.messages.count > 0 %>
-    <% @order.errors.full_messages.each do |message| %>
-      <div>
-        <p class="alert alert-warning"><%= message %></p>
-      </div>
-    <% end %>
-  <% end %>
-
 <!-- ################################################### -->
   <div class="order_details_box">
     <h3>Order Details</h3><%= link_to cart_path, class: "btn" do %><span class="glyphicon glyphicon-pencil"></span><% end %>
@@ -51,6 +37,19 @@
 
 
 <!-- ################################################### -->
+<% if flash.now[:errors] %>
+  <div>
+    <p class="alert alert-danger"><%= flash.now[:errors] %></p>
+  </div>
+<% end %>
+
+<% if @order.errors.messages.count > 0 %>
+  <% @order.errors.full_messages.each do |message| %>
+    <div>
+      <p class="alert alert-warning"><%= message %></p>
+    </div>
+  <% end %>
+<% end %>
 
   <div class="shipping_info">
     <%= form_for @order, url: shipping_path(@order), method: :put, class: "form" do |f| %>
@@ -99,6 +98,11 @@
 
   <!-- ################################################### -->
   <% if action_name == "shipping" %>
+    <% if action_name == "finalize" && flash.now[:errors] %>
+      <div>
+        <p class="alert alert-danger"><%= flash.now[:errors] %></p>
+      </div>
+    <% end %>
     <%= form_for @order, url: finalize_order_path(@order), method: :put, class: "form" do |f| %>
 
       <hr>
@@ -108,7 +112,7 @@
 
           <div class="form-group">
               <%= f.label :shipping, "Carrier Options" %>
-              <%= f.select :shipping, @options, {include_blank: true}, class: "form-control" %>
+              <%= f.select :shipping, @options, {include_blank: true}, required: true, class: "form-control" %>
           </div>
         </div>
 
