--- a/app/views/orders/checkout2.html.erb
+++ b/app/views/orders/checkout2.html.erb
@@ -57,8 +57,8 @@
   <% end %>
 </table>
 
+<p> Subtotal: <%= readable_price(@order.subtotal) %></p>
 <p>Shipping cost: <%= readable_price(@shipping.to_i) %></p>
-<p>Order total: <%= readable_price(@order.subtotal) %></p>
 
 <p>Final total: <%= readable_price(@shipping.to_i + @order.subtotal) %></p>
 
