--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -97,24 +97,23 @@
   </div>
 
   <!-- ################################################### -->
-  <% if action_name == "shipping" %>
-    <% if action_name == "finalize" && flash.now[:errors] %>
-      <div>
-        <p class="alert alert-danger"><%= flash.now[:errors] %></p>
-      </div>
-    <% end %>
+  <% if action_name == "shipping" || action_name == "finalize" %>
     <%= form_for @order, url: finalize_order_path(@order), method: :put, class: "form" do |f| %>
 
       <hr>
       <div id="shipping_info">
         <div class="checkout_section">
           <h3>Shipment Method</h3>
+      <% unless action_name == "finalize" %>
 
           <div class="form-group">
               <%= f.label :shipping, "Carrier Options" %>
               <%= f.select :shipping, @options, {include_blank: true}, required: true, class: "form-control" %>
           </div>
         </div>
+      <% else %>
+        <p>You've select <%= @order.shipping %></p>
+      <% end %>
 
         <hr>
         <div class="checkout_section">
