Added code to handle if a user inputs an address that does not exist. It will redirect back to the checkout page and flash an error. It will not let you move on to the next part of the checkout process until you have entered correct info.

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -98,7 +98,7 @@
   </div>
 
   <!-- ################################################### -->
-  <% if action_name == "shipping" || action_name == "finalize" %>
+  <% if action_name == "shipping" && !flash[:errors] || action_name == "finalize" %>
     <%= form_for @order, url: finalize_order_path(@order), method: :put, class: "form" do |f| %>
 
       <hr>
